# wagtail-mailchimp-integration

./: MANIFEST.in  README.md  boot_django.py  makemigrations.py  migrate.py  setup.cfg  setup.py
.github/workflows/: publish.yml
sandbox/: requirements.txt
sandbox/home/: models.py
sandbox/home/migrations/: 0003_mailinglistsubscribepage.py  0003_sampleeventformpagewithmailinglistintegration_and_more.py  0004_mailinglistsubscribepage_success_redirect_page.py  0004_sampleproductpage.py  0005_remove_mailinglistsubscribepage_success_redirect_page.py  0005_sampleeventformpagewithmailinglistintegration_and_more.py  0006_alter_mailinglistsubscribepage_thank_you_text.py  0006_formfield.py  0007_sampleeventformpagewithmailinglistintegration_audience_list_id_and_more.py
sandbox/home/templates/integration/: event_registration_page.html  form_thank_you_landing.html
sandbox/home/templates/product/: product_page.html  product_page_email_template.html
sandbox/home/templates/subscribe/: mailing_list_subscribe_page.html
sandbox/sandbox/: urls.py
sandbox/sandbox/settings/: base.py  dev.py
sandbox/sandbox/templates/: base.html
wagtailmailchimp/: api.py  apps.py  errors.py  forms.py  models.py  views.py  wagtail_hooks.py  widgets.py
wagtailmailchimp/locale/sw/LC_MESSAGES/: django.po
wagtailmailchimp/migrations/: 0001_initial.py  0002_mailchimpsettings_delete_mailchimpapicontact_and_more.py
wagtailmailchimp/templates/wagtailmailchimp/: mailchimp_integration_form.html
wagtailmailchimper/: apps.py  blocks.py  models.py
(+2 files in other folders)
